fix thumbnail alignment

--- a/assets/styles/_override.scss
+++ b/assets/styles/_override.scss
@@ -230,7 +230,7 @@ header.header-light a.nav-link:hover::after {
   background-color: #a0a0a0 !important;
   border: 0 !important;
   border-radius: 0 !important;
-  top: -2.5vh !important;
+  top: -2.2vh !important;
 }
 
 .ui-slider-horizontal .ui-slider-handle {
